[package]
name = "ws2812-rs"
version = "0.2.1"
edition = "2024"
description = "Flexible #![no_std] Rust driver for WS2812B LEDs — supports delay traits, spinloops, manual timing, and custom color patterns with async also."
license = "MIT"
repository = "https://github.com/CosmoBunny/ws2812-rs"
keywords = [
  "ws2812",
  "rgb",
  "async",
  "no-std",
  "embedded-hal",
]

[dependencies]
embedded-hal = "1.*"
embedded-hal-async = { version = "1.*", optional = true }
embassy-time = { version = "0.5.*" }

[features]
default = ["spinloop_delay"]
async = ["dep:embedded-hal-async"]
manual_delay = []
spinloop_delay = []
own_delay = []
